Update parameter naming to be clearer
